--- a/themes/style/mnml.css
+++ b/themes/style/mnml.css
@@ -17,9 +17,12 @@
 }
 .slide {
     background: #fafafa;
-    margin: 40px;
+    /*margin: 40px;*/
 }
 
+p {
+    margin: 40px;
+}
 h1,
 h2,
 h3,
@@ -30,7 +33,7 @@ h6 {
     line-height: 1;
 }
 h1 {
-    font-size: 4.5em;
+    font-size: 3.5em;
     font-weight: bold;
     border-bottom: 5px #000 solid;
     margin: 0 0 70px 0;
